workloads/payment-service/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  template:
    spec:
      containers:
        - name: payment-service
          volumeMounts:
            - name: secret-volume
              mountPath: /workspace/configtree
              readOnly: true
      volumes:
        - name: secret-volume
          secret:
            secretName: payment-service-secret
